kcm/keys: prevent shortcut conflicts during save (BUG: 471370)

Fixes a bug where reassigning or swapping shortcuts could lead to temporary conflicts due to single-pass updates.

Use a two-phase approach: first remove obsolete shortcuts, then apply new ones, ensuring conflict-free updates.

BUG: 471370

To test: assign two actions different shortcuts, then swap them and save.


(cherry picked from commit 8f3f2e2719c0459f48c65b1960368a2ab884b14a)

fa296b49 kcm/keys: prevent shortcut conflicts during save
675518ef kcm/keys: simplify two-phase shortcut saving logic
88c33900 kcm/keys: update initialShortcuts incrementally in two-phase save
e87c84b5 kcm/keys: Remove unnecessary const_as

Co-authored-by: Dávid Bácskay-Nagy <daviddani84@gmail.com>